<resources>

    <string name="app_name">NCCP Roster</string>
    <string name="login_database_hint">Choose your database</string>
	<string name="login_btn">Login</string>
	<string name="username_hint">Username</string>
	<string name="password_hint">Password</string>
	<string name="login_create_account">Create account</string>
	
	<string name="title_choose_db">Choose database</string>
	
	<!-- Actions -->
	<string name="action_logout">Logout</string>
	<string name="action_new_program">New program</string>
	<string name="action_delete_program">Delete</string>
	<string name="action_rename_program">Rename</string>
	<string name="action_remove">Remove</string>
	<string name="action_save">Save</string>
	
	<!-- Dialog -->
	<string name="dialog_title_logout">Logout</string>
	<string name="dialog_msg_logout">Are you sure to logout?</string>
	<string name="dialog_title_remove_student">Remove student</string>
	<string name="dialog_msg_remove_student">Remove %s from database?</string>
	<string name="dialog_title_add_program">New program</string>
	<string name="dialog_title_rename_program">Rename program</string>
	<string name="dialog_msg_add_program">Enter new program\'s name</string>
	<string name="dialog_error_program_name_empty">Program name is empty</string>
	<string name="dialog_title_delete_program">Delete program</string>
	<string name="dialog_msg_delete_program">Are you sure to remove program %s?\nYou will lose all class and course information in this program!</string>
	<string name="dialog_error_program_name_same">Program name does not change</string>
	<string name="dialog_title_add_class">New class</string>
	<string name="dialog_title_rename_class">Rename class</string>
	<string name="dialog_hint_class_name">Class name</string>
	<string name="dialog_title_delete_class">Delete class</string>
	<string name="dialog_msg_delete_class">Delete class %s?</string>
	<string name="dialog_title_remove_course">Remove courses</string>
	<string name="dialog_msg_remove_course_1">Remove %s?</string>
	<string name="dialog_msg_remove_course">Remove these %d courses?</string>
	<string name="dialog_msg_remove_student_from_class_1">Remove %1$s from %2$s?</string>
	<string name="dialog_msg_remove_student_from_class">Remove these %1$d students from %2$s?</string>
	
	<!-- Menu -->
	<string name="menu_new_course">New course</string>
	<string name="menu_remove_course">Remove course</string>
	<string name="menu_add_studens">Add students</string>
	<string name="menu_remove_students">Remove students</string>
	<string name="menu_new_student">New Student</string>
	<string name="menu_search_students">Search students</string>
	<string name="menu_clear_selection">Clear</string>
	<string name="menu_select_all">Select all</string>
	<string name="menu_reverse">Reverse</string>
	
	<!-- Button -->
	<string name="button_edit">Edit</string>
	
	<!-- Hint -->
	<string name="hint_student_id">Student ID</string>
	<string name="hint_first_name">First name</string>
	<string name="hint_last_name">Last name</string>
	<string name="hint_gradelevel">Grade level</string>
	
	<!-- Message -->
	<string name="msg_student_info_saved">Student information saved</string>
	<string name="msg_course_saved">Course saved</string>
	<string name="msg_no_course_selected">No course selected</string>
	<string name="msg_students_added_1">1 student added</string>
	<string name="msg_students_added_1_exists">1 student added (%1$d existed)</string>
	<string name="msg_students_added">%1$d student added</string>
	<string name="msg_students_added_existed">%1$d student added (%2$d existed)</string>
	<string name="msg_no_student_selected">No student selected</string>
	<string name="msg_attendance_not_checked">Please check an option</string>
	<string name="msg_has_been_removed">%s has been removed</string>
	<string name="msg_time_in_after_time_out">Time in must be before time out</string>
	
	<!-- Error message -->
	<string name="error_program_class_name_empty">Class name is empty</string>
	<string name="error_program_class_not_changing">Class name does not change</string>
	<string name="error_program_name_exists">%s already exists</string>
	<string name="error_class_name_exists">%s already exists</string>
	<string name="error_course_name_empty">Course name is empty</string>
	<string name="error_course_duration_empty">Duration is empty</string>
	<string name="error_course_duration_invalid">Duration must be a positive integer</string>
	
	<!-- Login -->
	<string name="login_username_empty">Username is empty</string>
	<string name="login_password_empty">Password is empty</string>
	
	<!-- Create account -->
	<string name="title_register_account">Create new account</string>
	<string name="register_username">Username</string>
	<string name="register_password">Password</string>
	<string name="register_password_confirm">Confirm password</string>
	<string name="register_creation_code">Creation code</string>
	<string name="register_create_btn">Create account</string>
	<string name="register_error_username">Username is empty</string>
	<string name="register_error_password">Password is empty</string>
	<string name="register_error_password_cfm">Passwords don\'t match</string>
	<string name="register_error_creation_code">Creation code is required</string>
	<string name="register_incorrect_creation_code">Incorrect creation code</string>
	
	<!-- Main -->
	<string name="tab_title_program">PROGRAM</string>
	<string name="tab_title_attendence">ATTENDANCE</string>
	<string name="tab_title_students">STUDENTS</string>
	
	<!-- Programs -->
	<string name="title_programs">Programs</string>
	<string name="programs_empty_text">No programs\nTouch + to create one</string>
	<string name="sunday_short">Sun</string>
	<string name="monday_short">Mon</string>
	<string name="tuesday_short">Tue</string>
	<string name="wednesday_short">Wed</string>
	<string name="thursday_short">Thu</string>
	<string name="friday_short">Fri</string>
	<string name="saturday_short">Sat</string>
	<string name="program_class_course_count_0">No course</string>
	<string name="program_class_course_count_1">1 course</string>
	<string name="program_class_course_count">%d courses</string>
	<string name="program_class_student_count_0">No student</string>
	<string name="program_class_student_count_1">1 student</string>
	<string name="program_class_student_count">%d students</string>
	
	<!-- Students -->
	<string name="title_students">Students</string>
	<string name="btn_edit_student">Edit</string>
	<string name="btn_remove_student">Remove student</string>
	<string name="students_search_hint">Search first name or last name</string>
	<string name="students_empty_text">No students</string>
	
	<!-- Student detail -->
	<string name="student_detail_firstname">FIRST NAME</string>
	<string name="student_detail_lastname">LAST NAME</string>
	<string name="student_detail_id">STUDENT ID</string>
	<string name="student_detail_gradelevel">GRADE LEVEL</string>
	
	<!-- Student editor -->
	<string name="title_add_student">New student</string>
	<string name="title_edit_student">Edit student</string>
	<string name="student_editor_personal_info">PERSONAL INFORMATION</string>
	<string name="student_editor_school_info">SCHOOL INFORMATION</string>
	<string name="student_editor_emergency_contact">EMERGENCY CONTACT</string>
	<string name="student_editor_id">Student ID</string>
	<string name="student_editor_last_name">Last name</string>
	<string name="student_editor_first_name">First name</string>
	<string name="student_editor_grade_level">Grade level</string>
	<string name="student_editor_site">Site</string>
	<string name="student_editor_program">Program</string>
	<string name="student_editor_school">School</string>
	<string name="student_editor_address">Address</string>
	<string name="student_editor_emergency_contact_name">Contact name</string>
	<string name="student_editor_emergency_contact_phone">Contact phone</string>
	<string name="student_editor_emergency_contact_relationship">Contact relationship</string>
	<string name="student_editor_error_id_empty">Student ID is empty</string>
	<string name="student_editor_error_firstname_empty">Must have a first name</string>
	
	<!-- Class -->
	<string name="program_class_empty">No classes. Press + to add one</string>
	<string name="program_class_section_courses">COURSES</string>
	<string name="program_class_section_students">STUDENTS</string>
	
	<!-- Student selector -->
	<string name="selector_filter_student_id">Student ID</string>
	<string name="selector_filter_first_name">First name</string>
	<string name="selector_filter_last_name">Last name</string>
	<string name="selector_filter_grade_level">Grade level</string>
	<string name="dialog_title_student_id_filter">Filter student ID</string>
	<string name="dialog_title_first_name_filter">Filter first name</string>
	<string name="dialog_title_last_name_filter">Filter last name</string>
	<string name="dialog_title_grade_level_filter">Filter grade level</string>
	
	<!-- Edit course -->
	<string name="title_course_list">Course list</string>
	<string name="title_edit_course">Edit course</string>
	<string name="title_new_course">New course</string>
	<string name="list_item_course_time">%1$s, %2$d minutes</string>
	<string name="course_empty">No courses\nTouch + to add course</string>
	<string name="course_name_hint">Course name</string>
	<string name="course_time_section">COURSE TIME</string>
	<string name="course_duration_section">DURATION</string>
	<string name="duration_minutes">minutes</string>
	<string name="title_1_course_selected">1 course selected</string>
	<string name="title_n_course_selected">%d courses selected</string>
	
	<!-- Roster -->
	<string name="title_student_list">Student list</string>
	<string name="course_student_empty">No students in this course\nTouch + to add students</string>
	<string name="course_student_selector_empty">No student</string>
	<string name="title_1_student_selected">1 student selected</string>
	<string name="title_n_students_selected">%d students selected</string>
	
	<!-- Attendance -->
	<string name="title_attendance">Attendance</string>
	<string name="no_class">No classes in this program</string>
	<string name="no_course_this_class">No courses in %s</string>
	<string name="no_course_on_this_day">No courses on this day</string>
	<string name="no_programs">No programs</string>
	<string name="no_students_class">No students in %s</string>
	<string name="attendance_time_in">Time in: %s</string>
	<string name="attendance_time_out">Time out: %s</string>
	
	<!-- Attendance editor -->
	<string name="title_attendance_editor">Take attendance</string>
	<string name="attendance_editor_section_student">STUDENT</string>
	<string name="attendance_editor_section_course">COURSE</string>
	<string name="attendance_editor_section_date">DATE</string>
	<string name="attendance_editor_section_attendance">ATTENDANCE</string>
	<string name="attended">Attended</string>
	<string name="not_attended">Not attended</string>
	<string name="attendance_editor_time_in">Time in</string>
	<string name="attendance_editor_time_out">Time out</string>
	<string name="attendance_editor_comment">Comment</string>
	<string name="attendance_enter_time">Enter time</string>
</resources>
