<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minHeight="200dp"
    android:baselineAligned="false"
    android:orientation="horizontal" >
    
	<LinearLayout
	    android:id="@+id/course_schedule_sunday_layout"
	    android:layout_width="0dp"
	    android:layout_height="match_parent"
	    android:layout_weight="1"
	    android:orientation="vertical" >
	    
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="60dp"
	        android:layout_gravity="center_horizontal"
	        android:gravity="center_vertical"
	        android:text="@string/sunday_short" />
	</LinearLayout>
	
	<LinearLayout
	    android:id="@+id/course_schedule_monday_layout"
	    android:layout_width="0dp"
	    android:layout_height="match_parent"
	    android:layout_weight="1"
	    android:orientation="vertical" >
	    
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="60dp"
	        android:layout_gravity="center_horizontal"
	        android:gravity="center_vertical"
	        android:text="@string/monday_short" />
	</LinearLayout>
	
	<LinearLayout
	    android:id="@+id/course_schedule_tuesday_layout"
	    android:layout_width="0dp"
	    android:layout_height="match_parent"
	    android:layout_weight="1"
	    android:orientation="vertical" >
	    
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="60dp"
	        android:layout_gravity="center_horizontal"
	        android:gravity="center_vertical"
	        android:text="@string/tuesday_short" />
	</LinearLayout>
	
	<LinearLayout
	    android:id="@+id/course_schedule_wednesday_layout"
	    android:layout_width="0dp"
	    android:layout_height="match_parent"
	    android:layout_weight="1"
	    android:orientation="vertical" >
	    
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="60dp"
	        android:layout_gravity="center_horizontal"
	        android:gravity="center_vertical"
	        android:text="@string/wednesday_short" />
	</LinearLayout>
	
	<LinearLayout
	    android:id="@+id/course_schedule_thursday_layout"
	    android:layout_width="0dp"
	    android:layout_height="match_parent"
	    android:layout_weight="1"
	    android:orientation="vertical" >
	    
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="60dp"
	        android:layout_gravity="center_horizontal"
	        android:gravity="center_vertical"
	        android:text="@string/thursday_short" />
	</LinearLayout>
	
	<LinearLayout
	    android:id="@+id/course_schedule_friday_layout"
	    android:layout_width="0dp"
	    android:layout_height="match_parent"
	    android:layout_weight="1"
	    android:orientation="vertical" >
	    
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="60dp"
	        android:layout_gravity="center_horizontal"
	        android:gravity="center_vertical"
	        android:text="@string/friday_short" />
	</LinearLayout>
	
	<LinearLayout
	    android:id="@+id/course_schedule_saturday_layout"
	    android:layout_width="0dp"
	    android:layout_height="match_parent"
	    android:layout_weight="1"
	    android:orientation="vertical" >
	    
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="60dp"
	        android:layout_gravity="center_horizontal"
	        android:gravity="center_vertical"
	        android:text="@string/saturday_short" />
	</LinearLayout>
</LinearLayout>
