<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp" >
    
	<EditText
	    android:id="@+id/edit_course_edittext"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:hint="@string/course_name_hint" />
	
	<TextView
	    style="@style/SectionHeaderTextStyle"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/course_time_section" />
	
	<Spinner
	    android:id="@+id/edit_course_dayofweek_spinner"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content" />
	
	<TimePicker
	    android:id="@+id/edit_course_timepicker"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content" />
	
	<TextView
	    style="@style/SectionHeaderTextStyle"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/course_duration_section" />
	
	<Spinner
	    android:id="@+id/edit_course_duration_spinner"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content" />
</LinearLayout>
