<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary" >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp">

        <Button
            android:id="@+id/login_database_btn"
            style="@style/RoundButtonStyle"
            android:layout_width="280dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/login_database_hint"
            android:onClick="onDatabaseClick" />

        <EditText
            android:id="@+id/login_username_edittext"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:background="@drawable/edit_text_holo_light"
            android:gravity="center_horizontal"
            android:hint="@string/username_hint"
            android:inputType="text"
            android:singleLine="true" />

        <EditText
            android:id="@+id/login_password_edittext"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/edit_text_holo_light"
            android:gravity="center_horizontal"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:singleLine="true" />

        <Button
            android:id="@+id/login_login_btn"
            style="@style/RoundButtonStyle"
            android:layout_width="280dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/login_btn"
            android:onClick="onLoginClick" />
        
        <ProgressBar
            android:id="@+id/login_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:visibility="gone"
            android:layout_gravity="center_horizontal" />
        
        <TextView
            android:id="@+id/login_error_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="80dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:textSize="18sp"
            android:textColor="#ff0000" />
    </LinearLayout>

    <Button
        android:id="@+id/login_register_btn"
        android:background="@drawable/button_bottom"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textSize="18sp"
        android:text="@string/login_create_account"
        android:onClick="onRegisterClick" />
</RelativeLayout>